--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -22,12 +22,20 @@
         android:text="@string/crime_detail_label"
         style="?android:listSeparatorTextViewStyle"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
+
     <Button
         android:id="@+id/crime_date_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
+        android:layout_marginRight="16dp"
+        android:layout_weight="1"/>
 
     <CheckBox
         android:id="@+id/crime_solved"
@@ -35,6 +43,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_weight="1"
         android:text="@string/crime_solved_label"/>
+    </LinearLayout>
 
 </LinearLayout>
