--- a/app/src/main/res/layout/fragment_crime_list.xml
+++ b/app/src/main/res/layout/fragment_crime_list.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/crime_recycler_view"
@@ -6,3 +11,13 @@
               android:layout_height="match_parent">
 
 </android.support.v7.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/no_crimes_recycle_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_crimes"
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
+
+</RelativeLayout>
