--- a/app/src/main/res/menu/fragment_crime_list.xml
+++ b/app/src/main/res/menu/fragment_crime_list.xml
@@ -5,12 +5,9 @@
     <item android:id="@+id/menu_item_new_crime"
           android:title="@string/new_crime"
           android:icon="@android:drawable/ic_menu_add"
-          app:showAsAction="ifRoom|withText"
-        />
+          app:showAsAction="ifRoom|withText"/>
 
-    <item
-        android:id="@+id/menu_item_show_subtitle"
-        android:title="@string/show_subtitle"
-        app:showAsAction="ifRoom"
-        />
+    <item android:id="@+id/menu_item_show_subtitle"
+          android:title="@string/show_subtitle"
+          app:showAsAction="ifRoom"/>
 </menu>
