--- a/app/src/main/res/layout/list_item_crime.xml
+++ b/app/src/main/res/layout/list_item_crime.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="6dp"
     >
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <CheckBox
         android:id="@+id/list_item_crime_solved_checkbox"
         android:layout_width="wrap_content"
@@ -29,5 +33,6 @@
         android:layout_below="@id/list_item_crime_title_textview"
         android:padding="4dp"
         tools:text="Crime date"/>
+    </RelativeLayout>
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
