--- a/app/src/main/res/menu/fragment_crime_list.xml
+++ b/app/src/main/res/menu/fragment_crime_list.xml
@@ -4,7 +4,7 @@
 
     <item android:id="@+id/menu_item_new_crime"
           android:title="@string/new_crime"
-          android:icon="@android:drawable/ic_menu_add"
+          android:icon="@drawable/ic_add_white_24dp"
           app:showAsAction="ifRoom|withText"/>
 
     <item android:id="@+id/menu_item_show_subtitle"
